# phd_master_system

./: .gitignore  LICENSE  capacitor.config.json  package-lock.json  package.json  readme.md  tailwind.config.js  博士工作台_整合打卡逻辑优化版_fix5_sidebar_trim.html
android/app/: build.gradle
android/app/src/main/java/com/phd/workspace/: MainActivity.java  WebDavHttpPlugin.java
android/app/src/main/res/values/: strings.xml
app/: index.html
app/assets/: tailwind.css
app/sync/: engine.js  file-layout.js  file-layout.ts  hash.js  state.js  types.js  ui.js
app/sync/providers/: jianguoyun-webdav.js  jianguoyun-webdav.ts
scripts/: copy-vendor.mjs  prepare-static.mjs  tauri-build.ps1  tauri-dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  secure_store.rs  sync_fs.rs
