[package]
name = "phd_workbench"
version = "0.1.0"
description = "博士工作台桌面版"
authors = ["Codex"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "phd_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json", "form", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
uuid = { version = "1.23.1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }
